# website_nlp_langchain

./: .gitignore  README.md  main.py  pyproject.toml
src/app/LLM/: gemini.py
src/app/chunker/: website_chunking.py
src/app/chunker/chunks/: docs_chaicode_com.json
src/app/embedder/: embedding.py
src/app/vector_store/: vector_store.py
src/cli/: rag.py  spinner.py
src/tests/: qdrant_test.py
src/utils/: functions.py
